优化异常处理机制，增加一些小工具。